Fixed - bug 330284: [Theming][Tree][Table] Align cell padding in Tree and Table https://bugs.eclipse.org/bugs/show_bug.cgi?id=330284

--- a/bundles/org.eclipse.rap.rwt/src/org/eclipse/swt/internal/widgets/treekit/Tree.default.css
+++ b/bundles/org.eclipse.rap.rwt/src/org/eclipse/swt/internal/widgets/treekit/Tree.default.css
@@ -86,7 +86,7 @@ TreeColumn-SortIndicator:down {
 
 Tree-Cell {
   spacing: 3px;
-  padding: 0px 2px;
+  padding: 3px;
 }
 
 Tree-GridLine {
