--- a/tests/org.eclipse.rap.rwt.themes.test/src/org/eclipse/rap/rwt/themes/test/business/Tree.test.css
+++ b/tests/org.eclipse.rap.rwt.themes.test/src/org/eclipse/rap/rwt/themes/test/business/Tree.test.css
@@ -41,7 +41,7 @@ TreeColumn-SortIndicator {
 
 Tree-Cell {
   spacing: 3px;
-  padding: 0px 2px;
+  padding: 3px;
 }
 
 Tree-GridLine {
