--- a/tests/org.eclipse.rap.rwt.themes.test/src/org/eclipse/rap/rwt/themes/test/fancy/Tree.test.css
+++ b/tests/org.eclipse.rap.rwt.themes.test/src/org/eclipse/rap/rwt/themes/test/fancy/Tree.test.css
@@ -63,6 +63,11 @@ TreeColumn-SortIndicator:down {
   background-image: url( theme/fancy/icons/sort-indicator-down.png );
 }
 
+Tree-Cell {
+  spacing: 3px;
+  padding: 3px;
+}
+
 Tree-Indent {
   width: 16px;
   background-image: none;
