--- a/tests/org.eclipse.rap.rwt.themes.test/src/org/eclipse/rap/rwt/themes/test/rwtdefault/Tree.test.css
+++ b/tests/org.eclipse.rap.rwt.themes.test/src/org/eclipse/rap/rwt/themes/test/rwtdefault/Tree.test.css
@@ -66,7 +66,7 @@ TreeColumn-SortIndicator:down {
 
 Tree-Cell {
   spacing: 3px;
-  padding: 0px 2px;
+  padding: 3px;
 }
 
 Tree-GridLine {
